--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,7 @@ jobs:
               --name telegram_bot_container \
               -v /var/log/tgram_bot_logging:/var/log/tgram_bot_logging \
               -v /srv/telegram_service/app/config/.env:/srv/telegram_service/app/config/.env \
+              -v /srv/telegram_service/deploy.sh:/srv/telegram_service/deploy.sh \
               --restart unless-stopped \
               "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
           EOF
