--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,6 +50,7 @@ jobs:
               -v /var/log/tgram_bot_logging:/var/log/tgram_bot_logging \
               -v /srv/telegram_service/app/config/.env:/srv/telegram_service/app/config/.env \
               -v /srv/telegram_service/deploy.sh:/srv/telegram_service/deploy.sh \
+              -v /srv/telegram_service/cookie_info.txt:/srv/telegram_service/cookie_info.txt \
               --restart unless-stopped \
               "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
           EOF
