--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,7 @@ jobs:
               -v /srv/telegram_service/app/config/.env:/srv/telegram_service/app/config/.env \
               -v /srv/telegram_service/deploy.sh:/srv/telegram_service/deploy.sh \
               -v /srv/telegram_service/cookie_info.txt:/srv/telegram_service/cookie_info.txt \
+              -v /usr/local/bin/msedgedriver:/usr/local/bin/msedgedriver \
               --restart unless-stopped \
               "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
           EOF
