--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,8 +48,9 @@ jobs:
             docker run -d \
               --name telegram_bot_container \
               -v /var/log/tgram_bot_logging:/var/log/tgram_bot_logging \
-              -v /srv/telegram_service/app/config:/srv/telegram_service/app/config \
-              -v /srv/telegram_service:/srv/telegram_service \
+              -v /srv/telegram_service/app/config/.env:/srv/telegram_service/app/config/.env \
+              -v /srv/telegram_service/cookie_info.txt:/srv/telegram_service/cookie_info.txt \
+              -v /srv/telegram_service/:/srv/telegram_service \
               -v /usr/local/bin:/usr/local/bin \
               --restart unless-stopped \
               "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
