--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 anyio==4.4.0
 attrs==24.2.0
+beautifulsoup4==4.12.3
 certifi==2024.7.4
 cffi==1.17.0
 cfgv==3.4.0
@@ -26,6 +27,7 @@ requests==2.32.3
 selenium==4.23.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
+soupsieve==2.6
 trio==0.26.2
 trio-websocket==0.11.1
 typing_extensions==4.12.2
