--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,8 +48,7 @@ jobs:
             docker run -d \
               --name telegram_bot_container \
               -v /var/log/tgram_bot_logging:/var/log/tgram_bot_logging \
-              -v /srv/telegram_service/app/config/.env:/srv/telegram_service/app/config/.env \
-              -v /srv/telegram_service/cookie_info.txt:/srv/telegram_service/cookie_info.txt \
+              -v /home/config/.env:/home/config/.env \
               --restart unless-stopped \
               "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
           EOF
