--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 anyio==4.4.0
 attrs==24.2.0
 beautifulsoup4==4.12.3
+boto3==1.35.42
+botocore==1.35.42
 certifi==2024.7.4
 cffi==1.17.0
 cfgv==3.4.0
@@ -8,26 +10,33 @@ charset-normalizer==3.3.2
 distlib==0.3.8
 exceptiongroup==1.2.2
 filelock==3.15.4
+greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 identify==2.6.0
 idna==3.7
 instaloader==4.13.1
+jmespath==1.0.1
 nodeenv==1.9.1
 outcome==1.3.0.post0
 platformdirs==4.2.2
 pre-commit==3.7.1
+psycopg2==2.9.9
 pycparser==2.22
 PySocks==1.7.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-telegram-bot==21.4
 PyYAML==6.0.1
 requests==2.32.3
+s3transfer==0.10.3
 selenium==4.23.1
+six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
+SQLAlchemy==2.0.35
 trio==0.26.2
 trio-websocket==0.11.1
 typing_extensions==4.12.2
