--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ outcome==1.3.0.post0
 platformdirs==4.2.2
 pre-commit==3.7.1
 psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pycparser==2.22
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
