--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,11 @@ jobs:
       - name: Deploy container to AWS
         run: |
           ssh ubuntu@${{ secrets.AWS_TG_SERVER }} << 'EOF'
+          
+            docker container prune -f
+            docker image prune -af
+            docker volume prune -f
+
             docker pull "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
             docker stop telegram_bot_container || true
             docker rm telegram_bot_container || true
