--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 anyio==4.4.0
 asyncpg==0.29.0
 attrs==24.2.0
@@ -8,8 +9,11 @@ certifi==2024.7.4
 cffi==1.17.0
 cfgv==3.4.0
 charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
 distlib==0.3.8
 exceptiongroup==1.2.2
+fastapi==0.115.2
 filelock==3.15.4
 greenlet==3.1.1
 h11==0.14.0
@@ -25,6 +29,8 @@ platformdirs==4.2.2
 pre-commit==3.7.1
 psycopg2-binary==2.9.9
 pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -38,10 +44,12 @@ sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
 SQLAlchemy==2.0.35
+starlette==0.40.0
 trio==0.26.2
 trio-websocket==0.11.1
 typing_extensions==4.12.2
 urllib3==2.2.2
+uvicorn==0.32.0
 virtualenv==20.26.3
 websocket-client==1.8.0
 wsproto==1.2.0
