--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,24 +38,36 @@ jobs:
       - name: Push Docker image
         run: docker push "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
 
-      # SSH into VPS and pull the latest Docker image, stop old container, and start the new one
-      - name: Deploy container to AWS
+
+      # SSH into VPS to deploy using Docker Compose
+      - name: Deploy with Docker Compose on AWS
         run: |
           ssh ubuntu@${{ secrets.AWS_TG_SERVER }} << 'EOF'
-          
-            docker container prune -f
-            docker image prune -af
-            docker volume prune -f
-
-            docker pull "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
-            docker stop telegram_bot_container || true
-            docker rm telegram_bot_container || true
-            docker run -d \
-              --name telegram_bot_container \
-              -v /var/log/tgram_bot_logging:/var/log/tgram_bot_logging \
-              -v /home/ubuntu/config/.env:/srv/telegram_service/app/config/.env \
-              -v /home/ubuntu/config/.aws:/root/.aws \
-              -p 5952:5952 \
-              --restart unless-stopped \
-              "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
+            cd /srv/telegram_service/
+            
+            # Pull the latest image and clean up unused resources
+            docker-compose pull telegram_bot_app
+            docker-compose down
+            docker-compose up -d --remove-orphans
           EOF
+      # SSH into VPS and pull the latest Docker image, stop old container, and start the new one
+      # - name: Deploy container to AWS
+      #   run: |
+          # ssh ubuntu@${{ secrets.AWS_TG_SERVER } << 'EOF'
+          
+      #       docker container prune -f
+      #       docker image prune -af
+      #       docker volume prune -f
+
+      #       docker pull "${{ secrets.DOCKER_USERNAME }"/telegram_bot_app:latest
+      #       docker stop telegram_bot_container || true
+      #       docker rm telegram_bot_container || true
+      #       docker run -d \
+      #         --name telegram_bot_container \
+      #         -v /var/log/tgram_bot_logging:/var/log/tgram_bot_logging \
+      #         -v /home/ubuntu/config/.env:/srv/telegram_service/app/config/.env \
+      #         -v /home/ubuntu/config/.aws:/root/.aws \
+      #         -p 5952:5952 \
+      #         --restart unless-stopped \
+      #         "${{ secrets.DOCKER_USERNAME }"/telegram_bot_app:latest
+      #     EOF
