--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,32 +30,56 @@ jobs:
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      # Build the Docker image
-      - name: Build Docker image
-        run: docker build -t "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest .
 
-      # Push Docker image to Docker Hub
-      - name: Push Docker image
-        run: docker push "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
-
-      # SSH into VPS and copy the docker-compose.yml
-      - name: Copy docker-compose file to server
+      # Build the Docker images using Docker Compose
+      - name: Build Docker images
         run: |
-          scp -i ${{ secrets.TG_DEPLOY_SSH_KEY }} docker-compose.yml ubuntu@${{ secrets.AWS_TG_SERVER }}:/home/ubuntu/config/
+          cd ~/config
+          docker-compose build
 
+      # Push Docker images to Docker Hub
+      - name: Push Docker images
+        run: |
+          cd ~/config
+          docker-compose push  
 
-      # SSH into VPS and deploy with Docker Compose
-      - name: Deploy with Docker Compose
+      # SSH into VPS and deploy using Docker Compose
+      - name: Deploy containers to AWS
         run: |
           ssh ubuntu@${{ secrets.AWS_TG_SERVER }} << 'EOF'
-            docker-compose -f /home/ubuntu/config/docker-compose.yml
-            docker container prune -f
-            docker image prune -af
-            docker volume prune -f
-
-            docker-compose -f /srv/telegram_service/docker-compose.yml pull 
-            docker-compose -f /path/to/docker-compose.yml up -d
+            cd ~/config
+            docker-compose down
+            docker-compose up -d
+            docker system prune -f
           EOF
+
+          
+      # # Build the Docker image
+      # - name: Build Docker image
+      #   run: docker build -t "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest .
+
+      # # Push Docker image to Docker Hub
+      # - name: Push Docker image
+      #   run: docker push "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
+
+      # # SSH into VPS and copy the docker-compose.yml
+      # - name: Copy docker-compose file to server
+      #   run: |
+      #     scp -i ${{ secrets.TG_DEPLOY_SSH_KEY }} docker-compose.yml ubuntu@${{ secrets.AWS_TG_SERVER }}:~/config/
+
+
+      # # SSH into VPS and deploy with Docker Compose
+      # - name: Deploy with Docker Compose
+      #   run: |
+      #     ssh ubuntu@${{ secrets.AWS_TG_SERVER }} << 'EOF'
+      #       docker-compose -f /home/ubuntu/config/docker-compose.yml
+      #       docker container prune -f
+      #       docker image prune -af
+      #       docker volume prune -f
+
+      #       docker-compose -f /srv/telegram_service/docker-compose.yml pull 
+      #       docker-compose -f /path/to/docker-compose.yml up -d
+      #     EOF
 
       # SSH into VPS and pull the latest Docker image, stop old container, and start the new one
       # - name: Deploy container to AWS
