--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,13 +30,13 @@ jobs:
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      # Build the Docker image
-      - name: Build Docker image
-        run: docker build -t "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest .
+      # # Build the Docker image
+      # - name: Build Docker image
+      #   run: docker build -t "${{ secrets.DOCKER_USERNAME }"/telegram_bot_app:latest .
 
-      # Push Docker image to Docker Hub
-      - name: Push Docker image
-        run: docker push "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
+      # # Push Docker image to Docker Hub
+      # - name: Push Docker image
+      #   run: docker push "${{ secrets.DOCKER_USERNAME }"/telegram_bot_app:latest
 
 
       # SSH into VPS and deploy using Docker Compose
