--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,16 +30,26 @@ jobs:
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      # Build the Docker image
-      - name: Build Docker image
-        run: docker build -t "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest .
 
-      # Push Docker image to Docker Hub
-      - name: Push Docker image
-        run: docker push "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
+      - name: Build application image
+        run: |
+          docker build -t "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest -f ./app/Dockerfile ./app
 
-      
-      
+
+      - name: Build API image
+        run: |
+            docker build -t "${{ secrets.DOCKER_USERNAME }}"/api:latest -f ./api/Dockerfile.api ./api
+
+
+      - name: Push application image
+        run: |
+          docker push "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
+          
+      - name: Push API image
+        run: |
+          docker push "${{ secrets.DOCKER_USERNAME }}"/api:latest
+
+
       # SSH into VPS and pull the latest Docker image, stop old container, and start the new one
       - name: Deploy container to AWS
         run: |
@@ -50,17 +60,66 @@ jobs:
             docker volume prune -f
       
             docker pull "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
+            docker pull "${{ secrets.DOCKER_USERNAME }}"/api:latest
+
             docker stop telegram_bot_container || true
             docker rm telegram_bot_container || true
+
+
             docker run -d \
               --name telegram_bot_container \
               -v /var/log/tgram_bot_logging:/var/log/tgram_bot_logging \
               -v /home/ubuntu/config/.env:/srv/telegram_service/app/config/.env \
               -v /home/ubuntu/config/.aws:/root/.aws \
+              --restart unless-stopped \
+              "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
+
+
+            docker stop api_container || true
+            docker rm api_container || true
+
+            docker run -d \
+              --name api_container \
+              -v /var/log/api_logging:/var/log/api_logging \
+              -v /home/ubuntu/config/.env:/srv/telegram_service_api/api/config/.env \
+              -v /home/ubuntu/config/.aws:/root/.aws \
               -p 5952:5952 \
               --restart unless-stopped \
               "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
           EOF
+
+
+      # # Build the Docker image
+      # - name: Build Docker image
+      #   run: docker build -t "${{ secrets.DOCKER_USERNAME }"/telegram_bot_app:latest .
+
+      # # Push Docker image to Docker Hub
+      # - name: Push Docker image
+      #   run: docker push "${{ secrets.DOCKER_USERNAME }"/telegram_bot_app:latest
+
+      
+      
+      # # SSH into VPS and pull the latest Docker image, stop old container, and start the new one
+      # - name: Deploy container to AWS
+      #   run: |
+      #     ssh ubuntu@${{ secrets.AWS_TG_SERVER } << 'EOF'
+      
+      #       docker container prune -f
+      #       docker image prune -af
+      #       docker volume prune -f
+      
+      #       docker pull "${{ secrets.DOCKER_USERNAME }"/telegram_bot_app:latest
+      #       docker stop telegram_bot_container || true
+      #       docker rm telegram_bot_container || true
+      #       docker run -d \
+      #         --name telegram_bot_container \
+      #         -v /var/log/tgram_bot_logging:/var/log/tgram_bot_logging \
+      #         -v /home/ubuntu/config/.env:/srv/telegram_service/app/config/.env \
+      #         -v /home/ubuntu/config/.aws:/root/.aws \
+      #         -p 5952:5952 \
+      #         --restart unless-stopped \
+      #         "${{ secrets.DOCKER_USERNAME }"/telegram_bot_app:latest
+      #     EOF
       
       
         # # SSH into VPS and deploy using Docker Compose
