--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,12 +33,12 @@ jobs:
 
       - name: Build application image
         run: |
-          docker build -t "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest -f ./app/Dockerfile ./app
+          docker build -t "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest -f Dockerfile .
 
 
       - name: Build API image
         run: |
-            docker build -t "${{ secrets.DOCKER_USERNAME }}"/api:latest -f ./api/Dockerfile.api ./api
+            docker build -t "${{ secrets.DOCKER_USERNAME }}"/api:latest -f Dockerfile.api .
 
 
       - name: Push application image
