--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,7 +85,7 @@ jobs:
               -v /home/ubuntu/config/.aws:/root/.aws \
               -p 5952:5952 \
               --restart unless-stopped \
-              "${{ secrets.DOCKER_USERNAME }}"/telegram_bot_app:latest
+              "${{ secrets.DOCKER_USERNAME }}"/api:latest
           EOF
 
 
